--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
             <img src="https://i.ibb.co/PtXK2Y5/77f658a30883008d305c69e8f183a48d.jpg" alt="INRL-OFFICIAL" class="profile-img">
         </div>
         <div class="text-data">
-            <span class="name">BABIYA OFFICIAL</span>
+            <span class="name">I AM BABIYA PROGRAMMER🕊️</span>
             <span class="job">♞</span>
         </div>
         <div class="buttons">
-            <a href="https://youtube.com/@Dextertoola999" class="button">YOUTUBE </a>
-            <a href="https://wa.me/message/5AUBZLIL7HM6D1" class="button">WHATSAPP</a>
+            <a href="t.me/babiya_id_top_up_center" class="button">TELEGRAM </a>
+            <a href="https://wa.me/+94764978991?text=Site+Info⛔" class="button">WHATSAPP</a>
         </div>
         <p>I am a student from Sri Lanka who loves programming. My project is a WhatsApp bot. This is the official page I made for this bot. My APIs are available here.</p>
         
@@ -280,4 +280,5 @@
     </script>
 </body>
 </html>
+
 
