--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 <body>
     <div class="profile-card">
         <div class="image">
-            <img src="https://i.ibb.co/PtXK2Y5/77f658a30883008d305c69e8f183a48d.jpg" alt="INRL-OFFICIAL" class="profile-img">
+            <img src="https://postimg.cc/nsx1K1x3" alt="INRL-OFFICIAL" class="profile-img">
         </div>
         <div class="text-data">
             <span class="name">I AM BABIYA PROGRAMMER🕊️</span>
@@ -280,5 +280,6 @@
     </script>
 </body>
 </html>
+
 
 
