--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
             <a href="t.me/babiya_id_top_up_center" class="button">TELEGRAM </a>
             <a href="https://wa.me/+94764978991?text=Site+Info⛔" class="button">WHATSAPP</a>
         </div>
-        <p>I am a student from Sri Lanka who loves programming. My project is a WhatsApp bot. This is the official page I made for this bot. My APIs are available here.</p>
+        <p>I'm deeply passionate about *Cyber Security* and always learning. I explore ethical hacking, system defense, and digital safety every day. This space is where I grow, share, and build my journey in the cyber world.
+</p>
         
         <!-- Comment Box Toggle Button -->
         <button class="toggle-comment-box" onclick="toggleCommentBox()">Leave a Comment</button>
@@ -280,6 +281,7 @@
     </script>
 </body>
 </html>
+
 
 
 
